--- a/socket-client/package.json
+++ b/socket-client/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.6.5",
+    "nuxt-headlessui": "^1.1.4",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "sass": "^1.66.1",
