--- a/socket-server/build.gradle
+++ b/socket-server/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation "org.springframework.boot:spring-boot-starter-quartz"
+
 	// JPA
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	runtimeOnly("com.mysql:mysql-connector-j")
